# GSF-copilot-workshop

./: README.md
.devcontainer/: devcontainer.json
.github/: CODEOWNERS
WordSearchGame/: Program.cs  _Imports.razor
WordSearchGame/Data/: WeatherForecast.cs  WeatherForecastService.cs
WordSearchGame/Pages/: Error.cshtml  Error.cshtml.cs  FetchData.razor  Index.razor  _Host.cshtml
WordSearchGame/Properties/: launchSettings.json
WordSearchGame/Shared/: MainLayout.razor  NavMenu.razor
docs/: NewToGitHub.md
wordsearch_rust/: Cargo.toml  package-lock.json  package.json  readme.md
wordsearch_rust/src/: lib.rs
workshop-modules/: 00-Setup.md  01-GitHub-intro.md  02 Developing basic Word Search game logic.md  03 Enhancing the Word Search game.md  04 Writing documentation with GitHub Copilot.md  05 Writing tests with GitHub Copilot.md  06 Finding and fixing bugs with GitHub Copilot.md  07 GitHub Advanced Security.md
